--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,16 @@
-body{
-    background: darkgray;
-    color: white;
+:root {
+    --background-color: white;
+    --text-color: black;
+}
+
+[data-theme='dark'] {
+    --background-color: #121212;
+    --text-color: white;
+}
+
+body {
+    background-color: var(--background-color);
+    color: var(--text-color);
 }
 .moviesPage{
     display: grid;
@@ -38,7 +48,7 @@ body{
 .paginationMainDiv{
 
 }
-button{
+.pagBut{
     background-color: #031944;
     color: rgba(255, 255, 255, 0.99);
     height: 6vh;
@@ -47,6 +57,12 @@ button{
 .searchBut{
     background-color: #031944;
     height: 3.5vh;
+    width: 10vw;
+}
+.switchBut{
+    background-color: #1f1f1f;
+    color: rgba(255, 255, 255, 0.99);
+    height: 5vh;
     width: 10vw;
 }
 .indicatorDiv{
